fix white space

--- a/index.css
+++ b/index.css
@@ -19,15 +19,16 @@ hr {
   background: white;
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
 .divider {
   height: 70px;
   width: 1px;
   background-color: #000;
   margin: 40px 2px 80px 2px;
-}
-
-.botanical {
-  margin-bottom: 40px;
 }
 
 .container {
@@ -79,6 +80,7 @@ hr {
 .intro {
   max-width: 44rem;
   margin-bottom: 30px;
+  line-height: 175%;
 }
 
 .about-img {
@@ -151,11 +153,6 @@ footer a {
   opacity: 0.8;
 }
 
-/* .icon-wrapper {
-  margin: 40px 0;
-  float: right;
-} */
-
 .icons {
   height: 32px;
   margin: 0 8px;
@@ -171,3 +168,68 @@ footer a {
   font-size: 12px;
   margin-top: 20px;
 }
+
+/* SCROLL */
+
+/* .arrows {
+  width: 60px;
+  height: 72px;
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  bottom: 60px;
+}
+
+.arrows path {
+
+  stroke: #fff;
+  fill: transparent;
+  stroke-width: 1px;
+  animation: arrow 2s infinite;
+  -webkit-animation: arrow 2s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.arrows path.a1 {
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s; 
+}
+
+.arrows path.a2 {
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s; 
+}
+
+.arrows path.a3 {
+  animation-delay: 0s;
+  -webkit-animation-delay: 0s; 
+} */
